--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -116,7 +116,7 @@ body {
     line-height: 40px;
     font-weight: bold;
 }
-#Tie {
+#Draw {
     color: grey;
 }
 #Win {
@@ -124,4 +124,82 @@ body {
 }
 #Loss {
     color: red;
+}
+.month-scroller {
+    background-color: #263b80;
+    width: 788px;
+    height: 35px;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+.current-month {
+    width: 700px;
+    height: 35px;
+    line-height: 35px;
+    float: left;
+}
+.left-arrow, .right-arrow {
+    float: left;
+    width: 44px;
+    height: 35px;
+    line-height: 35px;
+    background-color: #0b1f41;
+}
+.container-for-articles {
+    width: 608px;
+    margin: 10px auto;
+    overflow: hidden;
+    background-color: #263b80;
+}
+.article-container {
+    width: 590px;
+    height: 565px;
+    margin: 10px auto;
+    background-color: #0b1f41;
+}
+.article-headline, .article-photo, .article-description, .article-details, .article-photo-credits {
+    float: left;
+    width: 570px;
+    padding-left: 5px;
+    text-align: left;
+}
+.article-headline {
+    height: 50px;
+    font-size: 28px;
+    font-weight: 700;
+    padding-left: 10px;
+    padding-top: 10px;
+}
+.article-photo img {
+    width: 570px;
+    margin-left: 5px;
+}
+.article-photo-credits {
+    font-style: italic;
+    font-size: 14px;
+    height: 25px;
+    text-align: right;
+}
+.article-description {
+    height: 60px;
+    padding-left: 10px;
+}
+.article-details {
+    height: 30px;
+    text-decoration: none;
+    font-weight: 200;
+    padding-left: 10px;
+}
+.article-link {
+    border: 1px solid white;
+    background-color: #0b1f41;
+    color: white;
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+    transition-duration: 0.7s;
+    padding: 2px 5px;
+}
+.article-link:hover {
+    color: #0b1f41;
+    background-color: white;
 }
